--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
+ /*-------------Globals-----------------  */
+ @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&display=swap'); 
+ @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+#root{font-family: 'Alata', sans-serif;}
+li{list-style: none;}  
+a{text-decoration: none;} 
+/* -------------styles js---------------- */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dpNone{
+  display: none;
 }
+/* -------------Style nav---------------  */
+.nav{
+    background-color: black; 
+    color: white; 
+    padding: 1em 0px; 
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+}  
+/* logo */
+.nav_div-logo{
+    flex-grow: 1; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;}  
+.nav_div-logo h2 { 
+  font-family: 'Lobster', cursive; 
+  font-weight: 400;
+  font-size: 35px;
+  margin: 0px; 
+  margin-top: 10px;}
+.nav_div-logo h4 {
+  font-weight: 300; 
+  font-family: 'Alata', sans-serif;
+  margin: 0px;}
+/* menu */
+.nav_div-menu{ flex-grow: 3;} 
+.nav_ul-menu{
+  display: flex; 
+  flex-direction: row;
+  justify-content: space-around; 
+  flex-wrap: nowrap; }  
+.nav_a-menu{
+  padding: 8px 15px; 
+  border-radius: 2px;
+  cursor: pointer;}
+.nav_li-menu{
+  text-align: center; 
+  font-size: 20px; 
+  font-weight: 300;} 
+.icon {font-size: 1.6em;} 
+/* Media query nav */
+@media screen and (max-width: 850px){ 
+  .nav{
+    justify-content: space-between; 
+    display: flex; 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  } 
+  .nav_div-logo{ 
+    margin-left: 30px;
+    flex-grow: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .nav_div-menu{
+    flex-grow: 0; 
+    margin: 20.5px 30px; 
+    cursor: pointer;
   }
-  to {
-    transform: rotate(360deg);
+  .icon-res{
+    display: inline; 
+    margin: auto;
+  } 
+  .nav_ul-menu{
+    display: none; 
   }
 }
