--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,22 @@ a{text-decoration: none;}
   text-align: center; 
   font-size: 20px; 
   font-weight: 300;} 
-.icon {font-size: 1.6em;} 
+.icon {font-size: 1.6em;}  
+.icon-car{
+  position: relative;
+} 
+.icon-car-text{
+  width: 80%;
+  background-color: red; 
+  border-radius: 50%; 
+  font-size: 15px;  
+  position: absolute; 
+  top: -10px;
+  left: 16px;
+}
+
+
+
 /* Media query nav */
 @media screen and (max-width: 850px){ 
   .nav{
