--- a/src/styles/ItemListStyles.css
+++ b/src/styles/ItemListStyles.css
@@ -1,9 +1,30 @@
 /* itemCount------------------- */
+.itemL{
+    background-color: rgb(197, 197, 197);  
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    margin: 30px;
+    border-radius: 8px; 
+    min-width: 10%;
+    max-width: 25%;
+}
 .itemCount{
     display: flex; 
     flex-flow: row wrap;
     justify-content: space-between;
-    background-color: rgb(225, 188, 255);
+    background-color: rgb(121, 105, 160); 
+    width: 100%;
+}
+.itemL{
+    background-color: rgb(197, 197, 197);  
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    margin: 30px;
+    border-radius: 8px; 
+    width: 30%;
+ 
 }
 .itemc{
     background-color: rgb(197, 197, 197);  
@@ -14,39 +35,40 @@
     border-radius: 8px; 
     min-width: 10%;
     max-width: 25%;
- 
 } 
-.itemc-count{
+.itemL .itemc-count{
     background-color: white; 
     border-radius: 8px; 
     display: flex;
     flex-flow: row nowrap; 
     align-items: stretch;  
 }  
-.itemc-count span{
+.itemL .itemc-count span{
 padding: 0px 40px; 
 border-radius: 8px;
 font-size: 20px; 
 margin: 0px 4px;
 width: 8px; 
 }
-.itemc-count button{
+.itemL .itemc-count button{
     font-size: 20px;  
     background-color: white;
     color: rgb(2, 2, 94); 
     border-radius: 5px;
     padding: 3px 8px;
 } 
-.itemc-count button:hover , .itemc-button-car:hover, .item-info:hover{
+.itemL .itemc-count button:hover , .itemL .itemc-button-car:hover,.itemL .item-info:hover{
     background-color:rgb(126, 178, 255);
     transition-duration: 0.5s;  
 } 
-.itemc-button-car{
+.itemL .itemc-button-car{
    margin-top: 15px;
    border-radius: 5px; 
-   font-size: 16px; 
+   font-size: 20px; 
    padding: 5px 10px ;
    width: 200%;
+   background-color:rgb(2, 2, 94) ; 
+   color: white;
 }  
 /* Item------------------------------------------- */
 .item-div{
@@ -54,7 +76,7 @@ width: 8px;
     flex-direction: column;
     align-items: center; 
     position: relative;  
-    max-width: 100%;
+    width: 100%;
 }
 .item-img{ 
     width: 100%;
@@ -93,13 +115,14 @@ width: 8px;
 }  
 .item-info{
     margin-top: 15px;
-    border-radius: 5px;
-    font-size: 20px;
-    padding: 5px 10px;
-    width: 70%;
-    color: white;
-    text-align: center;
-    background: rgb(2, 2, 94);
+   border-radius: 5px; 
+   font-size: 20px; 
+   padding: 5px 10px; 
+   width: 70%;  
+   text-align: center;
+   color: white;
+   background-color: rgb(2, 2, 94);
+
 }
 @media screen and (max-width: 850px){
     .itemCount{
