--- a/src/components/styles/navStyles.module.css
+++ b/src/components/styles/navStyles.module.css
@@ -8,41 +8,42 @@
     justify-content: center;
 }  
 /* logo */
-.nav_div-logo{
+.navDivLogo{
     flex-grow: 1; 
     display: flex;
     flex-direction: column;
     align-items: center;}  
-.nav_div-logo h2 { 
+.navDivLogo h2 { 
   font-family: 'Lobster', cursive; 
   font-weight: 400;
   font-size: 35px;
   margin: 0px; 
   margin-top: 10px;}
-.nav_div-logo h4 {
+.navDivLogo h4 {
   font-weight: 300; 
   font-family: 'Alata', sans-serif;
   margin: 0px;}
 /* menu */
-.nav_div-menu{ flex-grow: 3;} 
-.nav_ul-menu{
+.navDivMenu{ flex-grow: 3;} 
+.navUlMenu{
   display: flex; 
   flex-direction: row;
   justify-content: space-around; 
   flex-wrap: nowrap; }  
-.nav_a-menu{
+.navAMenu{
   padding: 8px 15px; 
   border-radius: 2px;
-  cursor: pointer;}
-.nav_li-menu{
+  cursor: pointer; 
+color: white;}
+.navLiMenu{
   text-align: center; 
   font-size: 20px; 
   font-weight: 300;} 
 .icon {font-size: 1.6em;}  
-.icon-car{
+.iconCar{
   position: relative;
 } 
-.icon-car-text{
+.iconCarText{
   width: 80%;
   background-color: red; 
   border-radius: 50%; 
