--- a/src/components/styles/cartStyles.module.css
+++ b/src/components/styles/cartStyles.module.css
@@ -8,7 +8,7 @@
     display: block;
 }
 .cartProduct{
-    max-width: 45%;
+    max-width: 80%;
 } 
 .cartProduct1{
     display: flex;
@@ -38,17 +38,84 @@
 }
 
 .cartImg{
-    width: 25%;
+    max-width: 40%; 
+        height: fit-content;
     border-radius: 10px; 
     flex-grow: 1;
 
 }
 .subTotal{
-    max-width: 50%;
+    max-width: 100%;
 } 
 .cartProductInf{ 
     display:flex; 
     flex-direction: row;
     justify-content: space-around;
     flex-grow: 4;
+}
+@media screen and (max-width: 850px){
+
+    .cartContainer{
+        display:flex;
+        flex-direction: column; 
+        align-items: center;
+        width: 100%;
+    }
+    .cartTitleCont{
+        display: block;
+    }
+    .cartProduct{
+        max-width: 95%;
+    } 
+    .cartProduct1{
+        display: flex;
+        flex-direction: column; 
+    }
+    .cartProduct{
+        display: inline-flex;   
+        justify-content: space-between;
+        background-color: rgb(218, 218, 218); 
+        border-radius: 10px; 
+        position: relative;
+        overflow: hidden;
+        margin-top: 10px;
+    } 
+    .cartDivH4{
+        padding-left: 20px;
+    }
+    .cartElim{   
+        position: relative;
+        margin: auto;
+        padding: 10px; 
+        width: 40px; 
+        text-align: center;
+        background-color: rgb(145, 0, 0);
+        color: rgb(255, 119, 119);
+        font-size: 10px; 
+        border-radius: 5px; 
+        cursor: pointer;
+    }
+    
+    .cartImg{
+        max-width: 40%; 
+        height: fit-content;
+        border-radius: 10px; 
+        flex-grow: 1;
+    
+    }
+    .subTotal{
+        display: block;
+    } 
+    .cartProductInf{ 
+        display:flex; 
+        flex-direction: row;
+        justify-content: space-around;
+        flex-grow: 4;
+    }
+    .subButton{
+        color: white;
+        background-color: rgb(4, 4, 116) ;
+        font-size: 20px;
+    }
+
 }
