--- a/src/components/styles/navStyles.module.css
+++ b/src/components/styles/navStyles.module.css
@@ -1,82 +1,176 @@
 /* -------------Style nav---------------  */
 .nav{
-    background-color: black; 
-    color: white; 
-    padding: 1em 0px; 
-    display: flex;
-    flex-direction: row; 
-    justify-content: center;
-}  
-/* logo */
-.navDivLogo{
-    flex-grow: 1; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;}  
-.navDivLogo h2 { 
-  font-family: 'Lobster', cursive; 
-  font-weight: 400;
-  font-size: 35px;
-  margin: 0px; 
-  margin-top: 10px;}
-.navDivLogo h4 {
-  font-weight: 300; 
-  font-family: 'Alata', sans-serif;
-  margin: 0px;}
-/* menu */
-.navDivMenu{ flex-grow: 3;} 
-.navUlMenu{
-  display: flex; 
-  flex-direction: row;
-  justify-content: space-around; 
-  flex-wrap: nowrap; }  
-.navAMenu{
-  padding: 8px 15px; 
-  border-radius: 2px;
-  cursor: pointer; 
-color: white;}
-.navLiMenu{
-  text-align: center; 
-  font-size: 20px; 
-  font-weight: 300;} 
-.icon {font-size: 1.6em;}  
-.iconCar{
-  position: relative;
+
+background-color: rgb(2, 2, 94); 
+color: white; 
+padding: 8px 0px; 
+display: flex;
+flex-direction: row; 
+justify-content: center;
+
 } 
+
+/* logo */
+
+.navDivLogo{
+
+flex-grow: 1; 
+display: flex;
+flex-direction: column;
+align-items: center;
+}  
+
+.navDivLogo h2 { 
+
+font-family: 'Lobster', cursive; 
+font-weight: 400;
+font-size: 25px;
+margin: 0px; 
+margin-top: 10px;}
+
+.navDivLogo h4 {
+font-weight: 100;
+font-size: 10px;
+font-family: 'Alata', sans-serif;
+margin: 0px;}
+
+/* menu */
+
+.navDivMenu{     
+  flex-grow: 3;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+} 
+
+.navUlMenu{
+display: flex; 
+flex-direction: row;
+justify-content: space-around; 
+flex-wrap: nowrap; }  
+
+.navAMenu{
+padding: 8px 15px; 
+border-radius: 2px;
+cursor: pointer; 
+color: white;}
+
+.navLiMenu{
+text-align: center; 
+font-size: 14px; 
+font-weight: 300;} 
+
+.icon {font-size: 1.6em; 
+display: inline;} 
+
+.iconRes{
+display: none;
+} 
+
+.iconCar{
+position: relative;
+} 
+
 .iconCarText{
-  width: 80%;
-  background-color: red; 
-  border-radius: 50%; 
-  font-size: 15px;  
-  position: absolute; 
-  top: -10px;
-  left: 16px;
+width: 80%;
+background-color: red; 
+border-radius: 50%; 
+font-size: 15px;  
+position: absolute; 
+top: -10px;
+left: 16px;
 }
 
 
 
 /* Media query nav */
 @media screen and (max-width: 850px){ 
-  .nav{
-    justify-content: space-between; 
-    display: flex; 
+.nav{
+background-color: rgb(2, 2, 94); 
+color: white; 
+padding: 10px 0px; 
+display: flex;
+flex-direction: row; 
+justify-content: space-between ;
+}  
+/* logo */
 
+.navDivLogo{
+flex-grow: 0; 
+margin-left: 20px; 
+display: flex;
+flex-direction: column;
+align-items: center;}  
+
+.navDivLogo h2 { 
+font-family: 'Lobster', cursive; 
+font-weight: 400;
+font-size: 35px;
+margin: 0px; 
+margin-top: 10px;}
+
+.navDivLogo h4 {
+font-weight: 300; 
+font-family: 'Alata', sans-serif;
+margin: 0px;}
+/* menu */
+
+.navDivMenu{ 
+  flex-grow: 0;
+  display: flex; 
+  flex-direction: row; 
+  position: relative;} 
+
+.navUlMenu{
+  background-color: black;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 150%;
+  top: 60px;
+  height: 300%;
+  z-index: 200;
+}  
+
+.navAMenu{
+padding: 8px 15px; 
+border-radius: 2px;
+cursor: pointer; 
+color: white;}
+
+.navLiMenu{
+text-align: center; 
+font-size: 18px; 
+font-weight: 300;} 
+
+.icon {font-size: 25px;;
+  }  
+
+.iconCar{
+position: relative; 
+} 
+
+.iconRes{
+  display: inline-flex;
+  margin: 18px 18px; 
   } 
-  .nav_div-logo{ 
-    margin-left: 30px;
-    flex-grow: 0;
-  }
-  .nav_div-menu{
-    flex-grow: 0; 
-    margin: 20.5px 30px; 
-    cursor: pointer; 
-    
-  }
-  .icon-res{
-    display: inline; 
-    margin: auto;
-  } 
-  .nav_ul-menu{
+
+.iconCarText{
+width: 80%;
+background-color: red; 
+border-radius: 50%; 
+font-size: 20px;  
+position: absolute; 
+top: -10px;
+left: 16px;
+}
+
+/* menu respocive */
+
+.menuView{
     display: none; 
-  }
+    
+}
+
 }
